# discord_autobot_with_telegram

./: .gitignore  README.md  pyproject.toml
src/: main.py  utils.py
src/custom_logger/: __init__.py  custom_logger.py
src/discord_bot/: __init__.py  bot.py
src/telegram_bot/: __init__.py  bot.py
